--- a/start.yml
+++ b/start.yml
@@ -1,7 +1,7 @@
 ---
   - name: "Docker"
     hosts: localhost
-    #    become: yes
+    become: yes
     roles:
             #      - docker
         #      - docker-compose
