--- a/roles/awx/tasks/main.yml
+++ b/roles/awx/tasks/main.yml
@@ -8,11 +8,13 @@
       state: present
 
   - name: Copy zip file to /home path
+    become_user: "{{ user }}"
     copy:
       src: /home/vagrant/ansible/docker-awx/roles/awx/awx-17.1.0.zip
       dest: "{{ ushome }}"
 
   - name: Unzip AWX archive
+    become_user: "{{ user }}"
     unarchive:
       src: "{{ ushome }}/awx-17.1.0.zip"
       dest: "{{ ushome }}"
@@ -23,11 +25,13 @@
     register: pw_gen
 
   - name: Copy inventory file to playbook path
+    become_user: "{{ user }}"
     copy:
       src: "{{ inventory }}"
       dest: "{{ invdest }}"
 
   - name: Run AWX installation
+    become_user: "{{ user }}"
     command: ansible-playbook -i inventory install.yml
     args:
       chdir: /home/vagrant/awx-17.1.0/installer
