--- a/start.yml
+++ b/start.yml
@@ -3,6 +3,6 @@
     hosts: localhost
     become: yes
     roles:
-            #      - docker
-        #      - docker-compose
+      - docker
+      - docker-compose
       - awx
