--- a/roles/awx/vars/main.yml
+++ b/roles/awx/vars/main.yml
@@ -7,8 +7,7 @@ user: vagrant
 
 
 #####################################
-# VARIABLES YOU SHOULD NOT CHANGE!! #
+# VARIABLES YOU MUSTN´T CHANGE!! #
 #####################################
 ushome: /home/{{ user }}
-inventory: /home/{{ user }}/ansible/docker-awx/roles/awx/inventory
 invdest: /home/{{ user }}/awx-17.1.0/installer
