--- a/roles/docker-compose/tasks/main.yml
+++ b/roles/docker-compose/tasks/main.yml
@@ -16,31 +16,31 @@
       path: docker-compose-linux-x86_64
       mode: u+x
 
-  - name: Move Docker Compose binary to PATH
-    command: sudo mv docker-compose-linux-x86_64 /usr/local/bin/docker-compose
+  - name: Move Docker Compose binary to path
+    command: mv docker-compose-linux-x86_64 "{{ path }}"
 
   - name: Give all permissions to file
     file:
-      path: /usr/local/bin/docker-compose
+      path: "{{ path }}"
       mode: 777
 
-  - name: Add current user to docker group
-    user:
-      name: vagrant
-      groups: docker
-      append: yes
-
-  - name: Switch to docker group
+  - name: Create Docker group
     group:
       name: docker
       state: present
 
-  - name: Download Docker Compose completion script
+  - name: Add user to docker group
+    user:
+      name: "{{ user }}"
+      groups: docker
+      append: yes
+
+  - name: Download Docker Compose script
     get_url:
       url: https://raw.githubusercontent.com/docker/compose/master/contrib/completion/bash/docker-compose
       dest: /etc/bash_completion.d/docker-compose
 
-  - name: Source Docker Compose completion script
+  - name: Source Docker Compose script
     shell: source /etc/bash_completion.d/docker-compose
     args:
       executable: /bin/bash
@@ -48,3 +48,4 @@
   - name: Install Docker-Compose Python module
     pip:
       name: docker-compose
+      executable: pip3
