--- a/start.yml
+++ b/start.yml
@@ -1,7 +1,7 @@
 ---
   - name: "Docker, Docker-Compose & AWX Docker roles"
     hosts: localhost
-    become: yes
+    become: true
     roles:
       - docker
       - docker-compose
