--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -8,8 +8,7 @@
     command: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
 
   - name: Update cache
-    yum:
-      update_cache: yes
+    command: yum makecache
 
   - name: Remove old Docker packages
     package:
