Versión 2.0 - Mejoras y corrección de errores

--- a/roles/awx/tasks/main.yml
+++ b/roles/awx/tasks/main.yml
@@ -15,7 +15,7 @@
   - name: Unzip AWX archive
     become_user: "{{ user }}"
     unarchive:
-      src: "{{ ushome }}/awx-17.1.0.zip"
+      src: "{{ ushome }}/awx-{{ version }}.zip"
       dest: "{{ ushome }}"
       remote_src: yes
 
