Versión 2.0 - Mejoras y corrección de errores

--- a/roles/awx/tasks/main.yml
+++ b/roles/awx/tasks/main.yml
@@ -41,6 +41,11 @@
       regexp: "^secret_key=secureKey"
       state: present
 
+  - name: Copy compose.yml
+    copy:
+      src: compose.yml
+      dest: "{{ compdest }}"
+
   - name: Run AWX installation
     become_user: "{{ user }}"
     command: ansible-playbook -i inventory install.yml
